1.0.0
- Initial commit

1.0.2
- Implemented change requests from pull request

1.1.0
- Added configurable fetching/displaying of 'Playing now' info in live stream menu item
  (see 'Settings' to enable or disable fetching/displaying)
- Added more magazine content
  (see 'Settings' to disable or enable certain shows showing up in list)

  1.1.1
- Added magazine 'hessentip'
- Fixed live stream URL scraping - web page content changed by provider